--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,9 @@
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
         <failOnMissingWebXml>false</failOnMissingWebXml>
+         <sonar.host.url>http://52.87.172.62:9000/</sonar.host.url>
+         <sonar.login>admin</sonar.login>
+         <sonar.password>admin123</sonar.password>
     </properties>
 
     <dependencies>
