--- a/pom.xml
+++ b/pom.xml
@@ -66,11 +66,11 @@
     <distributionManagement>
         <repository>
             <id>nexus-releases</id>
-            <url>http://your-nexus-server/repository/maven-releases/</url>
+            <url>http://54.160.166.120:8081/repository/fintech-releases/</url>
         </repository>
         <snapshotRepository>
             <id>nexus-snapshots</id>
-            <url>http://your-nexus-server/repository/maven-snapshots/</url>
+            <url>http://54.160.166.120:8081/repository/fintech-snapshot/</url>
         </snapshotRepository>
     </distributionManagement>
 </project>
