--- a/pom.xml
+++ b/pom.xml
@@ -15,9 +15,8 @@
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
         <failOnMissingWebXml>false</failOnMissingWebXml>
-         <sonar.host.url>http://52.87.172.62:9000/</sonar.host.url>
-         <sonar.login>admin</sonar.login>
-         <sonar.password>admin123</sonar.password>
+         <sonar.host.url>http://3.93.197.13:9000/</sonar.host.url>
+         <sonar.token>sqa_5cda68f5dafa5a68f5148153d3eab752b6ed7286</sonar.token>
     </properties>
 
     <dependencies>
